# rust-sky

./: .env  Cargo.toml  README.md  application.toml  readme.md  sky.sql  test.http
sky-pojo/: Cargo.toml
sky-pojo/src/: dto.rs  vo.rs
sky-pojo/src/dto/: address.rs  category.rs  dish.rs  employee.rs  setmeal.rs  shopping_cart.rs  user.rs
sky-pojo/src/entities/: address_book.rs  category.rs  dish.rs  dish_flavor.rs  employee.rs  mod.rs  order_detail.rs  orders.rs  prelude.rs  setmeal.rs  setmeal_dish.rs  shopping_cart.rs  user.rs
sky-pojo/src/vo/: address.rs  dish.rs  employee.rs  flavor.rs  setmeal.rs  shopping_cart.rs  user.rs
src/: app.rs  config.rs  controller.rs  database.rs  main.rs  redis.rs  server.rs
src/config/: app.rs  auth.rs  database.rs  redis.rs  server.rs
src/controller/: admin.rs  upload.rs  user.rs
src/controller/admin/: category.rs  common.rs  dish.rs  employee.rs  setmeal.rs  shop.rs
src/controller/user/: address.rs  category.rs  dish.rs  login.rs  setmeal.rs  shopping_cart.rs
src/server/: address.rs  auth.rs  category.rs  dish.rs  employee.rs  error.rs  extract.rs  flavor.rs  latency.rs  middleware.rs  response.rs  setmeal.rs  shopping_cart.rs  user.rs
