[workspace]
members = [".", "sky-pojo"]

[package]
name = "rust-sky"
version = "0.1.0"
edition = "2024"

[dependencies]
sky-pojo = { path = "./sky-pojo" }


[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }

sea-orm = { version = "1.1.14", features = [
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "with-rust_decimal",
    "runtime-tokio",
    "sqlx-sqlite",
] }
