[package]
name = "sky-pojo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "with-rust_decimal",
    "runtime-tokio",
    "sqlx-sqlite",
] }
